Update cn1lib build hints

--- a/CN1Spatialite/codenameone_library_appended.properties
+++ b/CN1Spatialite/codenameone_library_appended.properties
@@ -6,5 +6,5 @@
 codename1.arg.android.repositories=maven { url "https://jitpack.io" }
 codename1.arg.android.gradleDependencies=compile 'com.github.sevar83:android-spatialite:2.0.0'\n
 codename1.arg.ios.pods.sources=https://github.com/shannah/cn1-spatialite.git
-codename1.arg.ios.pods=,cn1-spatialite-ios
+codename1.arg.ios.pods=,cn1-spatialite-ios-cocoapod
 codename1.arg.ios.platform=8.0
