--- a/CN1SpatialiteDemo/codenameone_settings.properties
+++ b/CN1SpatialiteDemo/codenameone_settings.properties
@@ -1,8 +1,8 @@
 #
-#Tue May 01 12:43:51 PDT 2018
+#Tue May 01 12:51:17 PDT 2018
+codename1.arg.java.version=8
 codename1.ios.appid=Q5GHSKAL2F.com.codename1.spatialite.demo
 codename1.ios.release.provision=
-codename1.arg.java.version=8
 codename1.arg.rim.obfuscation=false
 codename1.arg.ios.newStorageLocation=true
 codename1.j2me.nativeTheme=nbproject/nativej2me.res
@@ -15,15 +15,15 @@ codename1.ios.release.certificate=
 codename1.android.keystorePassword=codenameone*com
 codename1.ios.provision=
 codename1.arg.android.supportv4Dep_disabled=\    compile 'com.android.support\:support-v4\:25.+'
-codename1.arg.ios.dsym=false
-codename1.arg.android.gradleDep_disabled=compile 'com.github.sevar83\:android-spatialite\:2.0.0' 
 codename1.arg.android.release=false
+codename1.arg.android.gradleDep_disabled=compile 'com.github.sevar83\:android-spatialite\:2.0.0' 
+codename1.arg.ios.dsym=false
 codename1.arg.ios.statusbar_hidden=false
 codename1.arg.ios.debug_local=CN1SpatialDemo
 codename1.arg.android.gradleDependencies=compile 'com.github.sevar83\:android-spatialite\:2.0.0'\n
 codename1.languageLevel=5
 codename1.android.keystore=/Users/shannah/cn1_files/certs.cer/android-keystore.ks
-codename1.arg.ios.pods=,cn1-spatialite-ios
+codename1.arg.ios.pods=,cn1-spatialite-ios-cocoapod
 codename1.vendor=CodenameOne
 codename1.arg.win.ver=8
 codename1.ios.certificatePassword=
@@ -37,8 +37,8 @@ codename1.ios.debug.certificate=
 libVersion=212
 codename1.arg.ios.platform=8.0
 codename1.arg.ios.application_exits=false
-codename1.secondaryTitle=CodenameOne_Template
 codename1.description=
+codename1.secondaryTitle=CodenameOne_Template
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
 codename1.rim.certificatePassword=
