--- a/CN1Spatialite/codenameone_library_appended.properties
+++ b/CN1Spatialite/codenameone_library_appended.properties
@@ -4,7 +4,7 @@
 #
 #Wed Jan 09 17:59:31 IST 2013
 codename1.arg.android.repositories=maven { url "https://jitpack.io" }
-codename1.arg.android.gradleDependencies=compile 'com.github.sevar83:android-spatialite:2.0.0'\n
+codename1.arg.android.gradleDep=\n    compile 'com.github.sevar83:android-spatialite:2.0.0'
 codename1.arg.ios.pods.sources=https://github.com/shannah/cn1-spatialite.git
 codename1.arg.ios.pods=,cn1-spatialite-ios-cocoapod
 codename1.arg.ios.platform=8.0
