--- a/CN1SpatialiteDemo/codenameone_settings.properties
+++ b/CN1SpatialiteDemo/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Tue May 01 13:06:27 PDT 2018
+#Tue May 01 13:16:36 PDT 2018
 codename1.ios.appid=Q5GHSKAL2F.com.codename1.spatialite.demo
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -14,7 +14,6 @@ codename1.android.keystoreAlias=weblite
 codename1.ios.release.certificate=
 codename1.android.keystorePassword=codenameone*com
 codename1.ios.provision=
-codename1.arg.android.supportv4Dep_disabled=\    compile 'com.android.support\:support-v4\:25.+'
 codename1.arg.ios.dsym=false
 codename1.arg.android.gradleDep_disabled=compile 'com.github.sevar83\:android-spatialite\:2.0.0' 
 codename1.arg.android.release=false
@@ -35,10 +34,11 @@ codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
 libVersion=212
+codename1.arg.android.supportv4Dep=\    compile 'com.android.support\:support-v4\:25.+'
 codename1.arg.ios.platform=8.0
 codename1.arg.ios.application_exits=false
-codename1.description=
 codename1.secondaryTitle=CodenameOne_Template
+codename1.description=
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
 codename1.rim.certificatePassword=
@@ -46,6 +46,7 @@ codename1.version=1.0
 codename1.ios.certificate=
 codename1.icon=icon.png
 codename1.rim.signtoolCsk=
+codename1.arg.android.gradleDep=\n    compile 'com.github.sevar83\:android-spatialite\:2.0.0'
 codename1.arg.android.debug=true
 codename1.rim.signtoolDb=
 codename1.arg.ios.includePush=false
