Fixed build hint in ios.

--- a/CN1SpatialiteDemo/codenameone_settings.properties
+++ b/CN1SpatialiteDemo/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Tue May 01 13:16:36 PDT 2018
+#Tue May 01 13:35:26 PDT 2018
 codename1.ios.appid=Q5GHSKAL2F.com.codename1.spatialite.demo
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -29,7 +29,7 @@ codename1.ios.certificatePassword=
 codename1.ios.debug.certificatePassword=
 codename1.arg.ios.fastbuild=true
 codename1.mainName=SpatialiteDemo
-codename1.arg.ios.pods.sources=https\://github.com/shannah/cn1-spatialite.git
+codename1.arg.ios.pods.sources=https\://github.com/shannah/cn1-spatialite.git,https\://github.com/shannah/cn1-spatialite.git
 codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
